<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_fundo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="93dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="80dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/branco"
        android:background="@drawable/input_fundo"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_nome"
            android:inputType="text"
            android:textColor="@color/cinza_medio"
            android:paddingVertical="5dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/branco"
        android:background="@drawable/input_fundo"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/cinza_medio"
            android:paddingVertical="5dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/branco"
        android:background="@drawable/input_fundo"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_senha"
            android:inputType="textPassword"
            android:textColor="@color/cinza_medio"
            android:textSize="18sp"
            android:paddingVertical="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/cadastro_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_bg"
        android:text="@string/cadastrar"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/branco"
        android:textAllCaps="true"
        android:padding="5dp"
        android:theme="@style/botaoPressionado"
        />

    <ProgressBar
        android:id="@+id/cadastro_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"/>


</LinearLayout>